--- a/JavaScriptScopeComparison/style.css
+++ b/JavaScriptScopeComparison/style.css
@@ -1,3 +1,10 @@
+/*
+
+CSS was inspired by Soufiane Khalfaoui HaSsani from codepen
+https://codepen.io/soufiane-khalfaoui-hassani/pen/LYpPWda
+
+*/
+
 html {
     height: 100%;
   }
