--- a/JavaScriptScopeComparison/style.css
+++ b/JavaScriptScopeComparison/style.css
@@ -4,7 +4,6 @@ CSS was inspired by Soufiane Khalfaoui HaSsani from codepen
 https://codepen.io/soufiane-khalfaoui-hassani/pen/LYpPWda
 
 */
-
 html {
     height: 100%;
   }
@@ -14,7 +13,24 @@ html {
     font-family: sans-serif;
     background: linear-gradient(#141e30, #243b55);
   }
-  
+
+  .login-box header button {
+    position: absolute;
+    right: 0;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    border: none;
+  }
+
+  .login-box header #question_mark {
+    font-size: 3em;
+    position: absolute;
+    right: 0;
+    color: #fff;
+    padding-right: .5em;
+    cursor: pointer;
+  }
+
   table {
     width: 100%;
     table-layout: fixed;
@@ -27,10 +43,6 @@ html {
   th {
       padding:10px;
   }
-
-  /* tr {
-      height: 100px;
-  } */
 
   td {
       height: 100px !important;
@@ -52,15 +64,15 @@ html {
   }
   
   .login-box header h2 {
-    font-size: 80px;
+    font-size: 4em;
     margin: 0 30px;
     padding: 0;
     color: #fff;
     text-align: center;
   }
-  
+
   .login-box h3 {
-    font-size: 70px;
+    font-size: 3.5em;
     color: #fff;
     text-align: center;
     padding-bottom: .5em;
@@ -76,10 +88,8 @@ html {
   
   .login-box .user-box {
     top: -20px;
-    /* left: 0; */
     color: #fff;
     font-size: 12px;
-    /* display: inline-block; */
     margin-top: 40px;
   }
 
@@ -89,7 +99,6 @@ html {
 
   .login-box a {
     box-sizing: border-box;
-    /* position: relative; */
     display: inline-block;
     padding: 20px 20px;
     color: #fff;
@@ -103,7 +112,6 @@ html {
   
   .login-box td:hover {
     color: #fff;
-    /* background: #03e9f4; */
     border-radius: 5px;
     box-shadow: 0 0 5px #03e9f4,
                 0 0 25px #03e9f4,
@@ -111,109 +119,27 @@ html {
                 0 0 100px #03e9f4;
   }
 
-  .login-box button,
-  .login-box input {
+  .login-box .button{
     position: relative;
     display: inline-block;
     padding: 10px 20px;
     color: #141e30;
-    font-size: 16px;
+    font-size: 26px;
     text-decoration: none;
     text-transform: uppercase;
     overflow: hidden;
     transition: .5s;
-    margin-top: 40px;
-    letter-spacing: 4px
+    margin: 2em .5em 0em .5em;
+    letter-spacing: 4px;
+    font-weight: 700;
   }
   
-  .login-box button:hover,
-  .login-box input:hover {
-    background: #03e9f4;
-    color: #fff;
+  .login-box .button:hover{
+    /* background: #03e9f4; */
+    color: #141e30;
     border-radius: 5px;
     box-shadow: 0 0 5px #03e9f4,
                 0 0 25px #03e9f4,
                 0 0 50px #03e9f4,
                 0 0 100px #03e9f4;
   }
-/*   
-  .login-box button span {
-    position: absolute;
-    display: block;
-  }
-  
-  .login-box button span:nth-child(1) {
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(90deg, transparent, #03e9f4);
-    animation: btn-anim1 1s linear infinite;
-  }
-  
-  @keyframes btn-anim1 {
-    0% {
-      left: -100%;
-    }
-    50%,100% {
-      left: 100%;
-    }
-  }
-  
-  .login-box button span:nth-child(2) {
-    top: -100%;
-    right: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(180deg, transparent, #03e9f4);
-    animation: btn-anim2 1s linear infinite;
-    animation-delay: .25s
-  }
-  
-  @keyframes btn-anim2 {
-    0% {
-      top: -100%;
-    }
-    50%,100% {
-      top: 100%;
-    }
-  }
-  
-  .login-box button span:nth-child(3) {
-    bottom: 0;
-    right: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(270deg, transparent, #03e9f4);
-    animation: btn-anim3 1s linear infinite;
-    animation-delay: .5s
-  }
-  
-  @keyframes btn-anim3 {
-    0% {
-      right: -100%;
-    }
-    50%,100% {
-      right: 100%;
-    }
-  }
-  
-  .login-box button span:nth-child(4) {
-    bottom: -100%;
-    left: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(360deg, transparent, #03e9f4);
-    animation: btn-anim4 1s linear infinite;
-    animation-delay: .75s
-  }
-  
-  @keyframes btn-anim4 {
-    0% {
-      bottom: -100%;
-    }
-    50%,100% {
-      bottom: 100%;
-    }
-  }
-   */
